fixed main