@@ -4,7 +4,6 @@
 
 package process;
 
-import util.*;
 import java.util.*;
 import user.User;
 
@@ -21,7 +20,7 @@ public class ProcessAccount{
         String username = transaction.substring(3,18);
         username = username.replaceAll("\\s", "");
         String user_type = transaction.substring(19,21);
-        Double credit = new Double(transaction.substring(22,31));
+        Double credit = Double.valueOf(transaction.substring(22,31));
         User new_user = new User(username,user_type,credit);
 
         users.put(username, new_user);
@@ -36,7 +35,7 @@ public class ProcessAccount{
     public void addCredit(String transaction){
         String username = transaction.substring(3,18);
         username = username.replaceAll("\\s", "");
-        Double credit = new Double(transaction.substring(22,31));
+        Double credit = Double.valueOf(transaction.substring(22,31));
         users.get(username).credit += credit;
     }
 
@@ -45,7 +44,7 @@ public class ProcessAccount{
         buyer = buyer.replaceAll("\\s", "");
         String seller = transaction.substring(19,34);
         seller = seller.replaceAll("\\s", "");
-        Double credit = new Double(transaction.substring(35,43));
+        Double credit = Double.valueOf(transaction.substring(35,43));
 
         users.get(buyer).credit += credit;
         users.get(seller).credit -= credit;
