@@ -4,7 +4,6 @@
 
 package process;
 
-import util.*;
 import java.util.*;
 import item.Item;
 import javafx.util.Pair;
@@ -22,7 +21,7 @@ public class ProcessItem{
         seller_name = seller_name.replaceAll("\\s", "");
         String buyer_name = "";
         int auction_day = Integer.parseInt(transaction.substring(39,42));
-        Double current_bid = new Double(transaction.substring(43,49));
+        Double current_bid = Double.valueOf(transaction.substring(43,49));
 
         Pair<String, String> key = new Pair<>(item_name, seller_name);
         Item item = new Item(item_name, seller_name, buyer_name, auction_day, current_bid);
@@ -38,7 +37,7 @@ public class ProcessItem{
         seller_name = seller_name.replaceAll("\\s", "");
         String buyer_name = transaction.substring(39,54);
         buyer_name = buyer_name.replaceAll("\\s", "");
-        Double current_bid = new Double(transaction.substring(55,60));
+        Double current_bid = Double.valueOf(transaction.substring(55,60));
 
         Pair<String, String> key = new Pair<>(item_name, seller_name);
 
